fix bug in logStatus() of Cache